# Nazo

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
Debug/: Log.txt  settings.nazo
Debug/assets/nazo/ImGui/: ImGUI.ini
Debug/assets/prefabs/: Game Over.zp  Player.zp  Win.zp
Debug/assets/scenes/: Default_Scene.zs  Demo.zs  Game.zs
Debug/assets/shaders/: Debug2DLines.glsl  Default.glsl  Default_Editor.glsl
Debug/assets/textures/: block.png~
game/: CMakeLists.txt
game/src/: Game.cpp  Game.h  GameLayer.cpp  GameLayer.h  Main.cpp
nazo/: CMakeLists.txt
nazo/src/: Main.cpp  NazoApplication.cpp  NazoApplication.h
nazo/src/controls/: CameraController.cpp  CameraController.h
nazo/src/controls/gizmos/: Gizmo.cpp  Gizmo.h  GizmoObject.h  GizmoSystem.cpp  GizmoSystem.h  ScaleGizmo.cpp  ScaleGizmo.h  TranslateGizmo.cpp  TranslateGizmo.h
nazo/src/layers/: EditorLayer.cpp  EditorLayer.h  ImGuiLayer.cpp  ImGuiLayer.h
nazo/src/panels/: AssetPanel.cpp  AssetPanel.h  GameViewPort.cpp  GameViewPort.h  GridPanel.cpp  GridPanel.h  PropertiesPanel.cpp  PropertiesPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  TerminalPanel.cpp  TerminalPanel.h
nazo/src/utils/: ZImGui.cpp  ZImGui.h
scripts/: CMakeLists.txt
scripts/src/: Ball.cpp  Ball.h  DemoScript.cpp  DemoScript.h  Platform.cpp  Platform.h  Titlescreen.cpp  Titlescreen.h
zewada/: CMakeLists.txt
zewada/src/: Application.cpp  Application.h  Zewada.h  zpch.h
zewada/src/ECS/: Components.h
zewada/src/ECS/core/: ComponentArray.h  ComponentManager.h  Coordinator.h  EntityManager.h  SystemManager.h
zewada/src/ECS/systems/: AnimationManagerSystem.cpp  AnimationManagerSystem.h  AnimationSystem.cpp  AnimationSystem.h  CameraSystem.cpp  CameraSystem.h  GridObjectSystem.cpp  GridObjectSystem.h  NativeScriptSystem.cpp  NativeScriptSystem.h  Rigidbody2DSystem.cpp  Rigidbody2DSystem.h  SpriteRendererSystem.cpp  SpriteRendererSystem.h  TextSystem.cpp  TextSystem.h  TransformSystem.cpp  TransformSystem.h
zewada/src/events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
zewada/src/graphics/: Window.cpp  Window.h
zewada/src/graphics/openGL/DebugDrawing/: DebugDraw.cpp  DebugDraw.h  Line2D.h
zewada/src/graphics/openGL/renderables/: Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  Sprite.cpp  Sprite.h  SpriteSheet.cpp  SpriteSheet.h  Texture.cpp  Texture.h
zewada/src/graphics/openGL/renderer/: RenderBatch.cpp  RenderBatch.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h
zewada/src/layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
zewada/src/physics2d/: BodyType.h  ContactListener.cpp  ContactListener.h  Physics2D.cpp  Physics2D.h
zewada/src/scene/: GameObject.cpp  GameObject.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
zewada/src/utils/: Input.cpp  Input.h  Math.cpp  Math.h  Time.h  Utils.h
zewada/src/utils/debug/: Log.h  Logger.cpp  Logger.h  Memory.cpp  Memory.h
zewada/src/utils/resource/: AssetPool.cpp  AssetPool.h  FileUtils.h  ScriptLoader.cpp  ScriptLoader.h  Serializer.cpp  Serializer.h  Sound.cpp  Sound.h
